Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26832

Drops from external source are ignored in Qt 5, work in Qt 4.8.2

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.0.0 Beta 1
    • GUI: Drag and Drop
    • None
    • Fedora 17; qt5.0/beta-snapshots/2012-08-12_19-00-47/qt-linux-opensource-5.0.0-beta1-offline-x86_64-ubuntu1204.run

      When an item is dragged from outside of application (in this instance: a file from system file explorer):

      QDragEnterEvent::possibleActions() returns non-empty flag
      QDragMoveEvent::possibleActions() returns non-empty flag
      QDropEvent::possibleActions() returns an empty flag and the event is ignored

      The above is working as expected in Qt 4.8.2 where QDropEvent::possibleActions() returns non-empty flags and the event is then served to model->dropMimeData().

      Example included.

      --------------------------------------------

      Seems to work the same way for every descendant of QAbstractItemView. xcb packages on my system (from `yum list installed | grep xcb`):

      libxcb.i686 1.8.1-1.fc17
      libxcb.x86_64 1.8.1-1.fc17
      libxcb-devel.x86_64 1.8.1-1.fc17
      xcb-util.x86_64 0.3.8-2.fc17
      xcb-util-devel.x86_64 0.3.8-2.fc17
      xcb-util-image.x86_64 0.3.8-3.fc17
      xcb-util-image-devel.x86_64 0.3.8-3.fc17
      xcb-util-keysyms.x86_64 0.3.8-3.fc17
      xcb-util-keysyms-devel.x86_64 0.3.8-3.fc17
      xcb-util-renderutil.x86_64 0.3.8-1.fc17
      xcb-util-renderutil-devel.x86_64 0.3.8-1.fc17
      xcb-util-wm.x86_64 0.3.8-2.fc17
      xcb-util-wm-devel.x86_64 0.3.8-2.fc17

        1. main.cpp
          2 kB
          Konrad Zemek
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            paeglis Gatis Paeglis
            kondziu Konrad Zemek
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes