Fix drops from external sources.

Task-number: QTBUG-26832

Change-Id: Ia1ccce391178e73d26a4f09955bce6c37616384f
Reviewed-by: Lars Knoll <lars.knoll@digia.com>

cregit: c8c1604e881920cd6130dd642d0cace77dd4cbe5 https://github.com/qt/qtbase/commit/c8c1604e881920cd6130dd642d0cace77dd4cbe5